lab1/Test/L1-A-8-4.cmm
struct RDUMgWPFXGEvccGMOGZ wymbKmqYU7C1JZ ( int pLHpm5gEPAU5r 
  , float pvxoo ) {
  struct {
  }cyBuem4yrGmiZII = W00vwCwsgSuQtDBLSA5 , s0 [ 1904151836 
    ] ;
  if ( qugGO7lFL4 )   return vu >= Q - ! NqWhYMsfgDwD9d 
    ( mm9xyalrQ_ = qTy4YIEoNe5tcvFWvQ || ycnPc0qNnB1ltYRVe6T 
    && PJbrlcT < VKR_bwW * - ZK7IfgJvQ >= [ aQowbj_4yJV2ry_O38 
    != vh8GqNkqa2ESDO5jK + QthUrm * ( uX > cAryGWeaNARIH2 
    + ! nAz ( Z92h7Lmrd0vUrL2Z , DtSwxQ , DI85aNrzP9FM8p8wpi 
    + RxrhMf7SA3XJX1z7w [ t == JK ] <= eAINnq4O ) / 472896610.1664642227 
    * 1844230729 ) ] . ZBQg / - ! ! - a7H4NwoRwxpJm5BUIG 
    ( ) ) ;
else {
  }
}
int akG_ 
;
int ;
struct p0TC7Ues17U6Gh e_lgpdwEVdA5 , YBQzv 

;
struct fhGOrUmI06 z ( < ) {
}
struct v7DgwqxldJb ;
int Aqci8PVOICW_h 
;
int ;
int ! ;
int ;
struct fq6KtNjim4j {
}nXhMsocU 
;
int v3zGMfjXCOQS3Ml7 ( ) {
  MqNPhhMdo ;
  if ( LCht8c33YAhaZ )   while ( imbFVwMkSbY )   tPk_Ar1tYor3vyq 
    ;

else   if ( lAgm886_Sn84ZOuKh )   PLOc ;


[ }
